--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.sourceforge.jfuzzylogic</groupId>
+            <artifactId>jfuzzylogic</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 
 
@@ -40,8 +45,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
